--- a/website/tutorials/how_to/panes.mdx
+++ b/website/tutorials/how_to/panes.mdx
@@ -55,7 +55,7 @@ chart.applyOptions({
 });
 ```
 
-Lightweight Charts™ includes  [`PaneApi`](/docs/next/api/interfaces/IPaneApi) that allows you to control each pane. The API has methods to get information on the pane such as `getHeight()`, `paneIndex(), and `getSeries()`. It also contains methods to adjust the pane parameters, for example `setHeight(height)` and `moveTo(paneIndex)`.
+Lightweight Charts™ includes  [`PaneApi`](/docs/next/api/interfaces/IPaneApi) that allows you to control each pane. The API has methods to get information on the pane such as `getHeight()`, `paneIndex()`, and `getSeries()`. It also contains methods to adjust the pane parameters, for example `setHeight(height)` and `moveTo(paneIndex)`.
 
 To get the `PaneApi` instance for each pane, you need to call the `panes` method on the `ChartApi` instance.
 Let's say we want to set the height of the second pane to 300px and move it to the first position.
