--- a/website/tutorials/how_to/_usage-guide-partial.mdx
+++ b/website/tutorials/how_to/_usage-guide-partial.mdx
@@ -1,9 +1,9 @@
 <details>
 <summary>How to use the code sample</summary>
-<strong>The code presented below requires:</strong>
 
-- That `createChart` has already been imported. See [Getting Started](/docs#creating-a-chart) for more information,
-- and that there is an html div element on the page with an `id` of `container`.
+<strong>Before you use the code sample below, you should do the following::</strong>
+-  Import `createChart`. Refer to [Getting Started](/docs#creating-a-chart) for more information.
+-  Add an HTML div element with the `id` of the `container`.
 
 Here is an example skeleton setup: [Code Sandbox](https://codesandbox.io/s/lightweight-charts-skeleton-n67pm6).
 You can paste the provided code below the `// REPLACE EVERYTHING BELOW HERE` comment.
