--- a/website/tutorials/customization/intro.mdx
+++ b/website/tutorials/customization/intro.mdx
@@ -20,10 +20,11 @@ This tutorial provides an introduction to customizing Lightweight Charts™ appe
 
 Before we get started, let us have a look at what we will be building in this tutorial.
 
-<!--
+{/*
   note: iframe won't display correctly when using `docusaurus serve`,
   however it works correctly when hosted. https://github.com/facebook/docusaurus/issues/7991
--->
+*/}
+
 <iframe
     className="standalone-iframe"
     src={require('!!file-loader!./assets/step10.html').default}
@@ -78,11 +79,10 @@ Provided below is the 'starting point' file for the guide which is a simple HTML
 
 You can either:
 
-- <a href={require('!!file-loader!./assets/start.html').default} download="customization-tutorial-start.html" target="\_blank">
-      Download the file
-  </a> and then edit and run the example on your computer,
+- <a href={require('!!file-loader!./assets/start.html').default} download="customization-tutorial-start.html" target="\_blank">Download the file</a> and then edit and run the example on your computer,
 - or [open this JSFiddle](https://jsfiddle.net/TradingView/5h76xeqk/) and then edit and run the example within the browser.
-<!-- TODO: replace JSFiddle link above with one created using TradingView account -->
+
+{/* replace JSFiddle link above with one created using TradingView account */}
 
 :::tip
 
