--- a/website/tutorials/how_to/price-and-volume.mdx
+++ b/website/tutorials/how_to/price-and-volume.mdx
@@ -10,12 +10,14 @@ keywords:
 
 import VersionWarningAdmonition from "@site/src/components/VersionWarningAdmonition";
 
-<!-- Show warning when not on the latest published version  -->
-<!-- Tutorials section isn't versioned yet, hence the need for the warning message -->
-<!-- THESE TUTORIALS NEED TO BE UPDATED FOR VERSION 4 -->
+{/*
+  Show warning when not on the latest published version
+  Tutorials section isn't versioned yet, hence the need for the warning message
+  THESE TUTORIALS NEED TO BE UPDATED FOR VERSION 4
+*/}
 
 <VersionWarningAdmonition
-	notCurrent="This example is for the latest published version of Lightweight&nbsp;Charts."
+	notCurrent="This example is for the latest published version of Lightweight Charts."
 	type="caution"
 	displayVersionMessage
 />
