--- a/website/tutorials/index.mdx
+++ b/website/tutorials/index.mdx
@@ -14,11 +14,13 @@ import A11y from "@site/src/img/a11y.svg";
 
 import VersionWarningAdmonition from "@site/src/components/VersionWarningAdmonition";
 
-<!-- Show warning when not on the latest published version  -->
-<!-- Tutorials section isn't versioned yet, hence the need for the warning message -->
+{/*
+  Show warning when not on the latest published version
+  Tutorials section isn't versioned yet, hence the need for the warning message
+*/}
 
 <VersionWarningAdmonition
-	notCurrent="These tutorials are for the latest published version of Lightweight&nbsp;Charts."
+	notCurrent="These tutorials are for the latest published version of Lightweight Charts."
 	type="caution"
 	displayVersionMessage
 />
