--- a/website/tutorials/react/01-simple.mdx
+++ b/website/tutorials/react/01-simple.mdx
@@ -31,7 +31,7 @@ To run your project simply
 npm start
 ```
 
-This will create a web page accessible by default on <http://localhost:1234/>.
+This will create a web page accessible by default on [http://localhost:1234](http://localhost:1234).
 
 ## Creating a charting component
 
