update documentation website dependencies

--- a/website/docs/plugins/series-primitives.mdx
+++ b/website/docs/plugins/series-primitives.mdx
@@ -10,7 +10,7 @@ draw on the chart using
 [CanvasRenderingContext2D](https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D).
 
 Primitives are defined by implementing the
-[`ISeriesPrimitive`](../api/index.md#iseriesprimitive) interface. The
+[`ISeriesPrimitive`](../api/type-aliases/ISeriesPrimitive.md) interface. The
 interface defines the basic functionality and structure required for creating
 custom primitives.
 
@@ -66,7 +66,7 @@ interface) for drawing on the corresponding area of the chart using the
 API. The view can define a
 [`zOrder`](../api/interfaces/ISeriesPrimitivePaneView.md#zorder) to control where
 in the visual stack the drawing will occur (See
-[`SeriesPrimitivePaneViewZOrder`](../api/index.md#seriesprimitivepaneviewzorder)
+[`SeriesPrimitivePaneViewZOrder`](../api/type-aliases/SeriesPrimitivePaneViewZOrder.md)
 for more information).
 
 Renderers should provide a
