--- a/website/tutorials/how_to/legends.mdx
+++ b/website/tutorials/how_to/legends.mdx
@@ -55,7 +55,7 @@ You can see full [working examples](#examples) below.
 
 - [subscribeCrosshairMove](/docs/api/interfaces/IChartApi#subscribecrosshairmove)
 - [MouseEventParams Interface](/docs/api/interfaces/MouseEventParams)
-- [MouseEventhandler](/docs/api#mouseeventhandler)
+- [MouseEventhandler](/docs/api/type-aliases/MouseEventHandler)
 
 Below are a few external resources related to creating and styling html elements:
 
