--- a/website/tutorials/how_to/price-and-volume.mdx
+++ b/website/tutorials/how_to/price-and-volume.mdx
@@ -90,7 +90,7 @@ You can see a full [working example](#full-example) below.
 
 ## Resources
 
-- [OverlayPriceScale Options](/docs/api#overlaypricescaleoptions)
+- [OverlayPriceScale Options](/docs/api/type-aliases/OverlayPriceScaleOptions)
 - [Histogram Series Type](/docs/series-types#histogram)
 - [PriceFormat Types](/docs/api/interfaces/PriceFormatBuiltIn#type)
 - [Scale Margins](/docs/api/interfaces/PriceScaleOptions#scalemargins)
