--- a/website/tutorials/how_to/series-markers.mdx
+++ b/website/tutorials/how_to/series-markers.mdx
@@ -39,16 +39,16 @@ You can see a full [working example](#full-example) below.
 A series marker is an annotation which can be attached to a specific data point within a series.
 We don't need to specify a vertical price value but rather only the `time` property since the
 marker will determine it's vertical position from the data points values (such as `high` and
-`low` in the case of candlestick data) and the specified `position` property ([SeriesMarkerPosition](/docs/api#seriesmarkerposition)).
+`low` in the case of candlestick data) and the specified `position` property ([SeriesMarkerPosition](/docs/api/type-aliases/SeriesMarkerPosition)).
 
 ## Resources
 
 You can view the related APIs here:
 - [SeriesMarker](/docs/api/interfaces/SeriesMarker) - Series Marker interface.
-- [SeriesMarkerPosition](/docs/api#seriesmarkerposition) - Positions that can be set for the marker.
-- [SeriesMarkerShape](/docs/api#seriesmarkershape) - Shapes that can be set for the marker.
+- [SeriesMarkerPosition](/docs/api/type-aliases/SeriesMarkerPosition) - Positions that can be set for the marker.
+- [SeriesMarkerShape](/docs/api/type-aliases/SeriesMarkerShape) - Shapes that can be set for the marker.
 - [setMarkers](/docs/api/interfaces/ISeriesApi#setmarkers) - Method for adding markers to a series.
-- [Time Types](/docs/api#time) - Different time formats available to use.
+- [Time Types](/docs/api/type-aliases/Time) - Different time formats available to use.
 
 ## Full example
 
