--- a/website/tutorials/webcomponents/01-custom-element.mdx
+++ b/website/tutorials/webcomponents/01-custom-element.mdx
@@ -163,7 +163,7 @@ class LightweightChartWC extends HTMLElement {
 Finally, we can now create the chart using Lightweight Charts™. Depending on your
 build process, you may either need to import Lightweight Charts™, or access it
 from the global scope (if loaded as a standalone script). To create the chart,
-we call the [`createChart`](/docs/api#createchart) constructor function, passing
+we call the [`createChart`](/docs/api/functions/createChart) constructor function, passing
 our container element as the first argument. The returned variable will be a
 [`IChartApi`](/docs/api/interfaces/IChartApi) instance which we can use as shown
 in the API documentation. The IChartApi instance provides all the required
