--- a/website/tutorials/customization/creating-a-chart.mdx
+++ b/website/tutorials/customization/creating-a-chart.mdx
@@ -83,7 +83,7 @@ const candleStickData = generateCandlestickData();
 
 // highlight-start
 // Create the Main Series (Candlesticks)
-const mainSeries = chart.addCandlestickSeries();
+const mainSeries = chart.addSeries(LightweightCharts.CandlestickSeries);
 // Set the data for the Main Series
 mainSeries.setData(candleStickData);
 // highlight-end
