--- a/website/tutorials/customization/series.mdx
+++ b/website/tutorials/customization/series.mdx
@@ -18,7 +18,7 @@ import IterativeGuideWarning from './_iterative-guide-warning-partial.mdx';
 
 In this section, we will be customizing the visual styling of the candlestick series.
 
-We can add our custom options to the series by using the `applyOptions` method on the ISeriesApi instance for the candlestick series. In other words, we can call the `applyOptions` method on the `mainSeries` variable (which was returned when we evoked `addCandlestickSeries()` earlier).
+We can add our custom options to the series by using the `applyOptions` method on the ISeriesApi instance for the candlestick series. In other words, we can call the `applyOptions` method on the `mainSeries` variable (which was returned when we evoked `addSeries(CandlestickSeries)` earlier).
 
 The available options for the candlestick series is a combination of the following interfaces: [CandlestickStyleOptions](/docs/api/interfaces/CandlestickStyleOptions) and [SeriesOptionsCommon](/docs/api/interfaces/SeriesOptionsCommon).
 
