--- a/website/tutorials/demos/compare-multiple-series.mdx
+++ b/website/tutorials/demos/compare-multiple-series.mdx
@@ -12,7 +12,7 @@ keywords:
 
 This Multi-Series Comparison Example illustrates how an assortment of data
 series can be integrated into a single chart for comparisons. Simply use the
-charting API to create multiple series (such as `addLineSeries`).
+charting API `addSeries` to create multiple series.
 
 If you would like an unique price scales for each individual series,
 particularly when dealing with data series with divergent value ranges, then
