--- a/website/tutorials/customization/_apply-options-tabs-partial.mdx
+++ b/website/tutorials/customization/_apply-options-tabs-partial.mdx
@@ -10,7 +10,7 @@ import TabItem from "@theme/TabItem";
 <TabItem value="creation" label="During Creation">
 
 ```js
-const lineSeries = chart.addLineSeries({
+const lineSeries = chart.addSeries(LineSeries, {
     color: '#2962FF',
 });
 ```
@@ -19,7 +19,8 @@ const lineSeries = chart.addLineSeries({
 <TabItem value="applyOptions" label="Using applyOptions">
 
 ```js
-const lineSeries = chart.addLineSeries();
+const lineSeries = chart.addSeries(LineSeries, {
+});
 
 lineSeries.applyOptions({
     color: '#2962FF',
