--- a/website/tutorials/how_to/two-price-scales.mdx
+++ b/website/tutorials/how_to/two-price-scales.mdx
@@ -34,9 +34,9 @@ for the series which you would like to use the left scale. Note that by default 
 series will use the right scale thus we don't need to set that property on the other series.
 
 ```js
-const leftSeries = chart.addCandlestickSeries(
-    { priceScaleId: 'left' }
-);
+const leftSeries = chart.addSeries(CandlestickSeries, {
+    priceScaleId: 'left',
+});
 ```
 
 You can see a full [working example](#full-example) below.
