fix broken documentation links

--- a/website/tutorials/how_to/watermark.mdx
+++ b/website/tutorials/how_to/watermark.mdx
@@ -16,7 +16,7 @@ included below.
 
 ## Short answer
 
-A simple text watermark can be configured and added by using the [`createTextWatermark`](/docs/next/api#createTextWatermark) function exported
+A simple text watermark can be configured and added by using the [`createTextWatermark`](/docs/next/api/functions/createTextWatermark) function exported
 from the library as follows:
 
 ```js
@@ -43,7 +43,7 @@ You can see full [working examples](#examples) below.
 
 ## Resources
 
-- [`createTextWatermark` function](/docs/next/api#createTextWatermark).
+- [`createTextWatermark` function](/docs/next/api/functions/createTextWatermark).
 - [TextWatermark Options](/docs/next/api/interfaces/TextWatermarkOptions)
 
 ## Examples
@@ -83,7 +83,7 @@ You can see full [working examples](#examples) below.
 
 ## Resources
 
-- [`createImageWatermark` pane primitive](/docs/next/api#createImageWatermark).
+- [`createImageWatermark` pane primitive](/docs/next/api/functions/createTextWatermark).
 - [ImageWatermark Options](/docs/next/api/interfaces/ImageWatermarkOptions)
 
 :::tip
