fix link within watermark tutorial article

--- a/website/tutorials/how_to/watermark.mdx
+++ b/website/tutorials/how_to/watermark.mdx
@@ -64,7 +64,7 @@ import codeSimple from "!!raw-loader!./watermark-simple.js";
 
 ### Image Watermark Example
 
-If a simple text watermark doesn't meet your requirements then you can use the Image watermark via [`createImageWatermark`](/docs/next/api#createImageWatermark) function exported
+If a simple text watermark doesn't meet your requirements then you can use the Image watermark via [`createImageWatermark`](/docs/next/api/functions/createImageWatermark) function exported
 from the library as follows:
 
 ```js
